syntax = "proto3";
package contact;
option go_package = "../contactpb"; 
import "google/api/annotations.proto";

service ContactService {
  rpc Insert(InsertRequest) returns (InsertResponse){}
  rpc Read(ReadRequest) returns (ReadResponse){
     option (google.api.http) = {
      post: "/contact/read"
      body: "*"
   };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse){}
  rpc Delete (DeleteRequest) returns (DeleteResponse){}
  rpc Search (SearchRequest) returns (SearchResponse){}
}

message Contact{
    string phoneNumber = 1;
    string name = 2;
    string address = 3;
}

message InsertRequest{
    Contact contact = 1;
}

message InsertResponse{
    int32 statusCode = 1; // 1 --> success, else cases is failed
    string message = 2;
}

message ReadRequest{
    string phoneNumber = 1;
}

message ReadResponse {
    Contact Contact = 1;
}

message UpdateRequest {
    Contact newContact = 1;
}

message UpdateResponse {
    Contact updateContact = 2;
}

message DeleteRequest{
    string phoneNumber = 1;
}

message DeleteResponse{
    int32 statusCode = 1;
    string message = 2;
}

message SearchRequest{
    string searchName = 1;
}

message SearchResponse{
    repeated Contact results = 1;
}